--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="css/themes/loading-indicator.css">
 
 <body style="background-color:black">
-<img src="ivandogwood1.gif" style="width:75%;margin-left:13%;margin-top:20%;"></img>
+<img src="AB3E710A-8550-4824-A20D-571B33A1D5C6.gif" style="width:75%;margin-left:13%;margin-top:20%;"></img>
 <p style="margin-top:33px;text-align: center;color:white;font-family:courier;font-size:large;"> Your own sophisticated lowbrow blues-lick-laden, fuzz-covered Appalachian soul-powered guitar & drum, country-rock jam band duo. <br><br> Award-winning songwriting. <p>
 </body>
 
