--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <link rel="stylesheet" href="css/themes/loading-indicator.css">
 
 <body style="background-color:black">
-<img src="AB3E710A-8550-4824-A20D-571B33A1D5C6.gif" style="width:75%;margin-left:13%;margin-top:20%;"></img>
-<p style="margin-top:83px;text-align: center;color:white;font-family:courier;font-size:large;"> Your own sophisticated lowbrow blues-lick-laden, fuzz-covered Appalachian soul-powered guitar & drum, country-rock jam band duo. <br><br> Award-winning songwriting. <p>
+<img src="805A933C-8E22-4FE5-8690-7FEAF0BBEB66.gif" style="width:75%;margin-left:13%;margin-top:10%;"></img>
+<p style="margin-top:42px;text-align: center;color:white;font-family:courier;font-size:medium;"> Your own sophisticated lowbrow blues-lick-laden, fuzz-covered Appalachian soul-powered <br>guitar & drum, original rock & country jam band duo. <br><br> Award-winning songwriting. <p>
 </body>
 
 </html>
