--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <link rel="stylesheet" href="css/themes/loading-indicator.css">
 
 <body style="background-color:black">
-<img src="0DD01ADE-D956-40D2-8926-58F7BD6FA340.gif" style="width:75%;margin-left:13%;margin-top:10%;"></img>
-<p style="margin-top:42px;text-align: center;color:white;font-family:courier;font-size:medium;"> Your own sophisticated lowbrow blues-lick-laden, fuzz-covered Appalachian-based<br>guitar & drum-powered rock & country jamband duo. <br><br> Award-winning songwriting. <p>
-</body>
+<img src="0DD01ADE-D956-40D2-8926-58F7BD6FA340.gif" style="width:100%;margin-left:5%;margin-top:10%;"></img>
+<p style="margin-top:42px;text-align: center;color:white;font-family:courier;font-size:small;"> Your own sophisticated lowbrow blues-lick-laden, fuzz-covered Appalachian soul-drenched<br>guitar & drum-powered rock & country jam-band duo. <br><br> Award-winning songwriting. </p>
+<h3 style="text-align:center; color:gray;"> UPCOMING SHOWS </h3> </body>
 
 </html>
