--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body style="background-color:black">
 <img src="0DD01ADE-D956-40D2-8926-58F7BD6FA340.gif" style="width:100%;margin-left:0%;margin-top:10%;"></img>
-<p style="margin-top:42px;text-align: center;color:white;font-family:courier;font-size:small;"> Your own sophisticated lowbrow blues-lick-laden, fuzz-covered Appalachian soul-powered <br>guitar / drum country, rock & jam-band duo. <br><br> Award-winning songwriting. </p>
+<p style="margin-top:42px;text-align: center;color:white;font-family:courier;font-size:small;"> Your own sophisticated lowbrow blues-lick-laden, fuzz-covered Appalachian soul-powered <br>guitar / drum country rock & jam-band duo. <br><br> Award-winning songwriting. </p>
 <h3 style="text-align:center; color:gray;"> UPCOMING LIVE SHOWS </h3> </body>
 
 </html>
