--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body style="background-color:black">
 <img src="AB3E710A-8550-4824-A20D-571B33A1D5C6.gif" style="width:100%;margin-left:0%;margin-top:10%;"></img>
-<p style="margin-top:42px;text-align: center;color:white;font-family:courier;font-size:medium;"> Your own sophisticated lowbrow blues-lick-laden, fuzz-covered Appalachian soul-powered <br>guitar / drum rock & country jam-band duo. <br><br> Award-winning songwriting. </p>
-<h3 style="text-align:center; color:gray; padding-top:20px;"> UPCOMING LIVE SHOWS </h3> </body>
+<p style="margin-top:42px;text-align: center;color:white;font-family:courier;font-size:small;"> Your own sophisticated lowbrow blues-lick-laden, fuzz-covered Appalachian soul-powered <br>guitar / drum rock & country jam-band duo. <br><br> Award-winning songwriting. </p>
+<h3 style="text-align:center; color:gray; padding-top:10px;"> UPCOMING LIVE SHOWS </h3> </body>
 
 </html>
