--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 
 <body style="background-color:black">
 <img src="805A933C-8E22-4FE5-8690-7FEAF0BBEB66.gif" style="width:80%;margin-left:10%;margin-top:10%;"></img>
-<p style="margin-top:42px;text-align: center;color:white;font-family:courier;font-size:medium;"> Your own sophisticated lowbrow blues-lick-laden, fuzz-covered Appalachian soul-powered <br>guitar / drum rock & country jam-band duo. <br><br> Award-winning songwriting. </p>
+<p style="margin-top:42px;text-align: center;color:white;font-family:courier;font-size:medium;"> Your own sophisticated lowbrow blues-lick-laden, fuzz-covered Appalachian soul-powered <br>guitar/drum original rock & country jam band duo. <br><br> Award-winning songwriting. </p>
 <h3 style="text-align:center; color:gray; padding-top:15px;"> UPCOMING LIVE SHOWS </h3> </body>
-
 </html>
