--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
 <body style="background-color:black">
 <img src="805A933C-8E22-4FE5-8690-7FEAF0BBEB66.gif" style="width:80%;margin-left:10%;margin-top:10%;"></img>
 <p style="margin-top:42px;text-align: center;color:white;font-family:courier;font-size:large;"> Your own sophisticated lowbrow blues-lick-laden, fuzz-covered Appalachian soul-powered <br>guitar/drum original rock & country jam band duo. <br><br> Award-winning songwriting. </p>
-<h1 style="text-align:center; color:gray; padding-top:50px; text-decoration: overline; font-family:Courier American Typewriter; text-shadow: 0px 1px 0px red;"> '23 TAPS & BREWS TOUR SCHEDULE</h1> </body>
+<h1 style="text-align:center; color:gray; padding-top:50px; text-decoration: overline; font-family:Courier American Typewriter; text-shadow: 0px 1px 0px red;"> '23 BREW & TAP  TOUR SCHEDULE</h1> </body>
+<p style="color:white; text-align:center; margin-top:-20px;>(coming soon)</p>
 </html>
