--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <p style="margin-top:42px;text-align: center;color:white;font-family:courier;font-size:large;"> Your own sophisticated lowbrow blues-lick-laden, fuzz-covered Appalachian soul-powered guitar/drum original rock & country jam band duo. <br><br> Award-winning songwriting. </p>
 
 <audio controls autoplay>
-  <source src="Scott_Co_Blues.mp3" type="audio/mpeg">
+  <source src="Scott Co Blues.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
 
