--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <img src="805A933C-8E22-4FE5-8690-7FEAF0BBEB66.gif" style="width:80%;margin-left:10%;margin-top:10%;"></img>
 <p style="margin-top:42px;text-align: center;color:white;font-family:courier;font-size:large;"> Your own sophisticated lowbrow blues-lick-laden, fuzz-covered Appalachian soul-powered guitar/drum original rock & country jam band duo. <br><br> Award-winning songwriting. </p>
 
-<audio controls autoplay style="margin-left:40%;">
+<audio controls autoplay style="display:block; margin:auto;">
   <source src="Scott Co Blues.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
 
-<audio controls autoplay style="margin-left:40%;">
+<audio controls autoplay style="display:block; margin:auto;">
   <source src="Ease_My_Mind.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
