--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="icon" type="image/icon" href="favicon.ico">
   <title>The Outlaw Red Ivan Dogwood</title>
-
-  <!-- Slim CSS -->
+</head>
+  <!-- 
   <link rel="stylesheet" href="css/themes/slim.css">
   <link rel="stylesheet" href="css/themes/slim.one.css">
   <link rel="stylesheet" href="css/themes/loading-indicator.css">
-
+ --->
 <body style="background-color:black">
 <img src="805A933C-8E22-4FE5-8690-7FEAF0BBEB66.gif" style="width:80%;margin-left:10%;margin-top:10%;"></img>
 <p style="margin-top:42px;text-align: center;color:white;font-family:courier;font-size:large;"> Your own sophisticated lowbrow blues-lick-laden, fuzz-covered Appalachian soul-powered guitar/drum original rock & country jam band duo. <br><br> Award-winning songwriting. </p>
