--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="icon" type="image/icon" href="favicon.ico">
   <title>The Outlaw Red Ivan Dogwood</title>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
 </head>
   <!-- 
   <link rel="stylesheet" href="css/themes/slim.css">
@@ -18,19 +15,20 @@
  --->
 <body style="background-color:black">
 <img src="805A933C-8E22-4FE5-8690-7FEAF0BBEB66.gif" style="width:80%;margin-left:10%;margin-top:10%;"></img>
-<p style="margin-top:42px;text-align: center;color:white;font-family:special elite;font-size:large;"> Your own sophisticated lowbrow blues-lick-laden, fuzz-covered Appalachian soul-powered guitar/drum original rock & country jam band duo. <br><br> Award-winning songwriting. </p>
+<p style="margin-top:42px;text-align: center;color:white;font-family:courier;font-size:large;"> Your own sophisticated lowbrow blues-lick-laden, fuzz-covered Appalachian soul-powered guitar/drum original rock & country jam band duo. <br><br> Award-winning songwriting. </p>
 
-<audio controls autoplay style="display:block; margin:auto;">
+<h2 style="text-align:center; color:gray; padding-top:50px; text-decoration: overline; font-family:Courier American Typewriter; text-shadow: 0px 1px 0px red;"> '23 BREW & TAP  TOUR SCHEDULE</h2>
+<p style="color:white; text-align:center; margin-top:-20px;">(coming soon)</p>
+
+
+<audio controls style="display:block; margin:auto;">
   <source src="Scott Co Blues.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
 
-<audio controls autoplay style="display:block; margin:auto;">
+<audio controls style="display:block; margin:auto;">
   <source src="Ease_My_Mind.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
-
-<h2 style="text-align:center; color:gray; padding-top:50px; text-decoration: overline; font-family:Courier American Typewriter; text-shadow: 0px 1px 0px red;"> '23 BREW & TAP  TOUR SCHEDULE</h2>
-<p style="color:white; text-align:center; margin-top:-20px;">(coming soon)</p>
 </body>
 </html>
