--- a/index.html
+++ b/index.html
@@ -21,14 +21,15 @@
 <p style="color:white; text-align:center; margin-top:-20px;">(coming soon)</p>
 
 
-<audio controls style="display:block; margin:auto;">
+<audio controls title="Scott Co Blues"style="display:block; margin:auto;">
   <source src="Scott Co Blues.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
 
-<audio controls style="display:block; margin:auto;">
+<audio controls title="Ease My Mind"style="display:block; margin:auto;border:outset 9px darkred; border-radius:20px;">
   <source src="Ease_My_Mind.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
+
 </body>
 </html>
