--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <p style="margin-top:42px;text-align: center;color:white;font-family:courier;font-size:large;"> Your own sophisticated lowbrow blues-lick-laden, fuzz-covered Appalachian soul-powered guitar/drum original rock & country jam band duo. <br><br> Award-winning songwriting. </p>
 
 <h2 style="text-align:center; color:gray; padding-top:50px; text-decoration: overline; font-family:Courier American Typewriter; text-shadow: 0px 1px 0px red;"> '23 BREW & TAP  TOUR SCHEDULE</h2>
-<p style="color:white; text-align:center; margin-top:-20px;">(coming soon)</p>
+<p style="color:white; text-align:center; margin-top:-20px; padding-bottom:25px;">(coming soon)</p>
 
 
 <audio controls title="Scott Co Blues"style="display:block; margin:auto;">
