--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <img src="805A933C-8E22-4FE5-8690-7FEAF0BBEB66.gif" style="width:80%;margin-left:10%;margin-top:10%;"></img>
 <p style="margin-top:42px;text-align: center;color:white;font-family:courier;font-size:large;"> Your own sophisticated lowbrow blues-lick-laden, fuzz-covered Appalachian soul-powered guitar/drum original rock & country jam band duo. <br><br> Award-winning songwriting. </p>
 
-<h2 style="text-align:center; color:gray; padding-top:25px; text-decoration: overline; font-family:Courier, American Typewriter; text-shadow: 0px 1px 0px red;"> '23 BREW & TAP  TOUR SCHEDULE</h2>
+<h2 style="text-align:center; color:gray; padding-top:25px; text-decoration: overline; font-family:Courier American Typewriter; text-shadow: 0px 1px 0px red;"> '23 BREW & TAP  TOUR SCHEDULE</h2>
 <p style="color:white; text-align:center; margin-top:-20px; padding-bottom:25px;">(coming soon)</p>
 
 
@@ -25,7 +25,7 @@
   <source src="Scott Co Blues.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
-
+<p style="color:antiquewhite; text-align:center;font-family:copperplate;">(Live) Scott Co. Blues</p>
 <audio controls title="Ease My Mind"style="display:block; margin:auto;border:outset 6px lightgray; border-radius:15px;">
   <source src="Ease_My_Mind.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
