--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
   <source src="Scott Co Blues.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
-<p style="color:antiquewhite; text-align:center;font-family:copperplate;">(Live) Scott Co. Blues</p>
+<p style="color:antiquewhite; text-align:center;font-family:copperplate;margin-top:auto;">(Live) Scott Co. Blues</p>
 <audio controls title="Ease My Mind"style="display:block; margin:auto;border:outset 6px lightgray; border-radius:15px;">
   <source src="Ease_My_Mind.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
-
+<p style="color:antiquewhite; text-align:center;font-family:copperplate;margin-top:auto;">(Studio) Ease My Mind</p>
 </body>
 </html>
