--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 <p style="margin-top:42px;text-align: center;color:white;font-family:courier;font-size:large;"> Your own sophisticated lowbrow blues-lick-laden, fuzz-covered Appalachian soul-powered guitar/drum original rock & country jam band duo. <br><br> Award-winning songwriting. </p>
 
 <h2 style="text-align:center; color:gray; padding-top:25px; text-decoration: overline; font-family:Courier American Typewriter; text-shadow: 0px 1px 0px red;"> '23 BREW & TAP  TOUR SCHEDULE</h2>
-<p style="color:white; text-align:center; margin-top:-20px; padding-bottom:25px;">(TBA)</p>
+<p style="color:white; text-align:center; margin-top:-20px; padding-bottom:25px;">(coming soon)</p>
 
 
 <audio controls title="Scott Co Blues"style="display:block; margin:auto;border:outset 6px lightgray; border-radius:15px">
   <source src="Scott Co Blues.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
-<p style="color:antiquewhite; text-align:center;font-family:calibri;margin-top:auto;">(Live) Scott Co. Blues</p>
+<p style="color:antiquewhite; text-align:center;font-family:copperplate;margin-top:auto;">(Live) Scott Co. Blues</p>
 <audio controls title="Ease My Mind"style="display:block; margin:auto;border:outset 6px lightgray; border-radius:15px;">
   <source src="Ease_My_Mind.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
-<p style="color:antiquewhite; text-align:center;font-family:calibri;margin-top:auto;">(Studio) Ease My Mind</p>
+<p style="color:antiquewhite; text-align:center;font-family:copperplate;margin-top:auto;">(Studio) Ease My Mind</p>
 </body>
 </html>
