--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
     font-family: "Helvetica", sans-serif;
     color: #c0ccda;
   }
+
+  #sib-container textarea::placeholder {
+    text-align: left;
+    font-family: "Helvetica", sans-serif;
+    color: #c0ccda;
+  }
 </style>
 <link rel="stylesheet" href="https://sibforms.com/forms/end-form/build/sib-styles.css">
 
@@ -69,10 +75,32 @@ Your browser does not support the audio element.
 <p style="color:antiquewhite; font-size:small; text-align:center;font-family:copperplate;margin-top:auto;">(Studio) Ease My Mind</p>
 
 <div class="sib-form" style="text-align: center;
-         background-color: transparent;                                           ">
+         background-color: transparent;                                 ">
   <div id="sib-form-container" class="sib-form-container">
-    <div id="sib-container" class="sib-container--small sib-container--vertical" style="text-align:center; background-color:rgba(0,0,0,1); max-width:200px; border-radius:22px; border-width:1px; border-color:#C0CCD9; border-style:solid;">
-      <form id="sib-form" method="POST" action="https://a119c92f.sibforms.com/serve/MUIEAFmrab6bLFhGnBIJg3CLg0wGpx96Odtrd_sNsonVQ9RaVBVU7cPSRySJt67s414aYeI1Ukdn7j1LoziR-9rDXouSR7TTSKeyD8vptkuW42lA_vBhrgUH77Lyg6jjVM331UK8iNPVtZJ2T8GLG8WEXlWYceK5t8q6IljjzjwiKz8oSYrEMYIcSAU5k-sb-Lt4wIGPiJGALqas">
+    <div id="error-message" class="sib-form-message-panel" style="font-size:16px; text-align:left; font-family:&quot;Helvetica&quot;, sans-serif; color:#661d1d; background-color:#ffeded; border-radius:3px; border-color:#ff4949;max-width:200px;">
+      <div class="sib-form-message-panel__text sib-form-message-panel__text--center">
+        <svg viewBox="0 0 512 512" class="sib-icon sib-notification__icon">
+          <path d="M256 40c118.621 0 216 96.075 216 216 0 119.291-96.61 216-216 216-119.244 0-216-96.562-216-216 0-119.203 96.602-216 216-216m0-32C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm-11.49 120h22.979c6.823 0 12.274 5.682 11.99 12.5l-7 168c-.268 6.428-5.556 11.5-11.99 11.5h-8.979c-6.433 0-11.722-5.073-11.99-11.5l-7-168c-.283-6.818 5.167-12.5 11.99-12.5zM256 340c-15.464 0-28 12.536-28 28s12.536 28 28 28 28-12.536 28-28-12.536-28-28-28z" />
+        </svg>
+        <span class="sib-form-message-panel__inner-text">
+                          Your subscription could not be saved. Please try again.
+                      </span>
+      </div>
+    </div>
+    <div></div>
+    <div id="success-message" class="sib-form-message-panel" style="font-size:16px; text-align:left; font-family:&quot;Helvetica&quot;, sans-serif; color:#085229; background-color:#e7faf0; border-radius:3px; border-color:#13ce66;max-width:200px;">
+      <div class="sib-form-message-panel__text sib-form-message-panel__text--center">
+        <svg viewBox="0 0 512 512" class="sib-icon sib-notification__icon">
+          <path d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 464c-118.664 0-216-96.055-216-216 0-118.663 96.055-216 216-216 118.664 0 216 96.055 216 216 0 118.663-96.055 216-216 216zm141.63-274.961L217.15 376.071c-4.705 4.667-12.303 4.637-16.97-.068l-85.878-86.572c-4.667-4.705-4.637-12.303.068-16.97l8.52-8.451c4.705-4.667 12.303-4.637 16.97.068l68.976 69.533 163.441-162.13c4.705-4.667 12.303-4.637 16.97.068l8.451 8.52c4.668 4.705 4.637 12.303-.068 16.97z" />
+        </svg>
+        <span class="sib-form-message-panel__inner-text">
+                          Yep, you&#039;re awesome.
+                      </span>
+      </div>
+    </div>
+    <div></div>
+    <div id="sib-container" class="sib-container--small sib-container--vertical" style="text-align:center; background-color:rgba(0,0,0,1); max-width:200px; border-radius:22px; border-width:1px; border-color:#C0CCD9; border-style:solid; direction:ltr">
+      <form id="sib-form" method="POST" action="https://a119c92f.sibforms.com/serve/MUIEALz7q_aWJcUegJQPtDM1nNYbD9SAjlwGbZWIN3QEn3UdZeEZPw2Ykz4yxBTuBWURlC9WY6lPR2tEjvxghSC1Sf4XjJrszYW6bVo5f59leJGG4dPib_FC8be12a6IQlCC3SOxM-nPDKBUV_mgoziUEkNq7A-T8HTXdQQgdejg1v0g_1lYiPhRXWtMXDmHyIS18fVTBZ2uwl0c" data-type="subscription">
         <div style="padding: 8px 0;">
           <div class="sib-form-block" style="font-size:16px; text-align:center; font-family:&quot;Helvetica&quot;, sans-serif; color:#bfbfc0; background-color:transparent; text-align:center">
             <div class="sib-text-form-block">
@@ -86,7 +114,7 @@ Your browser does not support the audio element.
               <div class="form__label-row ">
 
                 <div class="entry__field">
-                  <input class="input " type="text" id="EMAIL" name="EMAIL" autocomplete="off" placeholder="EMAIL" data-required="true" required />
+                  <input class="input " type="text" id="EMAIL" name="EMAIL" autocomplete="off" placeholder="Your email" data-required="true" required />
                 </div>
               </div>
 
@@ -105,12 +133,35 @@ Your browser does not support the audio element.
             </button>
           </div>
         </div>
+
         <input type="text" name="email_address_check" value="" class="input--hidden">
         <input type="hidden" name="locale" value="en">
-        <input type="hidden" name="html_type" value="simple">
       </form>
     </div>
   </div>
 </div>
+<script>
+  window.REQUIRED_CODE_ERROR_MESSAGE = 'Please choose a country code';
+  window.LOCALE = 'en';
+  window.EMAIL_INVALID_MESSAGE = window.SMS_INVALID_MESSAGE = "The information provided is invalid. Please review the field format and try again.";
+
+  window.REQUIRED_ERROR_MESSAGE = "Bruh....how u gon subscribe w/o an email !? ";
+
+  window.GENERIC_INVALID_MESSAGE = "The information provided is invalid. Please review the field format and try again.";
+
+
+
+
+  window.translation = {
+    common: {
+      selectedList: '{quantity} list selected',
+      selectedLists: '{quantity} lists selected'
+    }
+  };
+
+  var AUTOHIDE = Boolean(1);
+</script>
+<script defer src="https://sibforms.com/forms/end-form/build/main.js"></script>
+
 </body>
 </html>
