--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 </style>
 <link rel="stylesheet" href="https://sibforms.com/forms/end-form/build/sib-styles.css">
 
+
 </head>
   <!-- 
   <link rel="stylesheet" href="css/themes/slim.css">
@@ -94,15 +95,15 @@ Your browser does not support the audio element.
           <path d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 464c-118.664 0-216-96.055-216-216 0-118.663 96.055-216 216-216 118.664 0 216 96.055 216 216 0 118.663-96.055 216-216 216zm141.63-274.961L217.15 376.071c-4.705 4.667-12.303 4.637-16.97-.068l-85.878-86.572c-4.667-4.705-4.637-12.303.068-16.97l8.52-8.451c4.705-4.667 12.303-4.637 16.97.068l68.976 69.533 163.441-162.13c4.705-4.667 12.303-4.637 16.97.068l8.451 8.52c4.668 4.705 4.637 12.303-.068 16.97z" />
         </svg>
         <span class="sib-form-message-panel__inner-text">
-                          Yep, you&#039;re awesome.
+                          Yep, you are awesome.
                       </span>
       </div>
     </div>
     <div></div>
-    <div id="sib-container" class="sib-container--small sib-container--vertical" style="text-align:center; background-color:rgba(0,0,0,1); max-width:200px; border-radius:22px; border-width:1px; border-color:#C0CCD9; border-style:solid; direction:ltr">
-      <form id="sib-form" method="POST" action="https://a119c92f.sibforms.com/serve/MUIEALz7q_aWJcUegJQPtDM1nNYbD9SAjlwGbZWIN3QEn3UdZeEZPw2Ykz4yxBTuBWURlC9WY6lPR2tEjvxghSC1Sf4XjJrszYW6bVo5f59leJGG4dPib_FC8be12a6IQlCC3SOxM-nPDKBUV_mgoziUEkNq7A-T8HTXdQQgdejg1v0g_1lYiPhRXWtMXDmHyIS18fVTBZ2uwl0c" data-type="subscription">
+    <div id="sib-container" class="sib-container--small sib-container--vertical" style="text-align:center; background-color:rgba(0,0,0,1); max-width:200px; border-radius:22px; border-width:0px; border-color:#C0CCD9; border-style:solid; direction:ltr">
+      <form id="sib-form" method="POST" action="https://a119c92f.sibforms.com/serve/MUIEAFG8pVKjOzwQrwxVDSDw5Hr6gbKQYynzBVj6ikaTreq-jcVoofjXSXHy_vN1DEPzmNPMnZ7rj6yo60Voe-wTnia60kUvArt7lqXmHaW5SSYQbv9y5Oa8PZ__0Zc-c_Vt66cpPw-BbvjUpVHyvE3DJxM_Xfxulejf2ZxhlM-yAWbrPdaIcTrCr5vA4UEARIuT9VRb1iApFlt0" data-type="subscription">
         <div style="padding: 8px 0;">
-          <div class="sib-form-block" style="font-size:16px; text-align:center; font-family:&quot;Helvetica&quot;, sans-serif; color:#bfbfc0; background-color:transparent; text-align:center">
+          <div class="sib-form-block" style="font-size:16px; text-align:center; font-family:Helvetica, sans-serif; color:#bfbfc0; background-color:transparent; text-align:center">
             <div class="sib-text-form-block">
               <p>Subscribe to our mailing list to stay updated.</p>
             </div>
@@ -140,6 +141,7 @@ Your browser does not support the audio element.
     </div>
   </div>
 </div>
+
 <script>
   window.REQUIRED_CODE_ERROR_MESSAGE = 'Please choose a country code';
   window.LOCALE = 'en';
