--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ Your browser does not support the audio element.
   window.LOCALE = 'en';
   window.EMAIL_INVALID_MESSAGE = window.SMS_INVALID_MESSAGE = "The information provided is invalid. Please review the field format and try again.";
 
-  window.REQUIRED_ERROR_MESSAGE = "Bruh....how u gon subscribe w/o an email !? ";
+  window.REQUIRED_ERROR_MESSAGE = "Bruh...how u gon subscribe with no email?! ";
 
   window.GENERIC_INVALID_MESSAGE = "The information provided is invalid. Please review the field format and try again.";
 
