--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Your browser does not support the audio element.
         <div style="padding: 8px 0;">
           <div class="sib-form-block" style="font-size:16px; text-align:center; font-family:Helvetica, sans-serif; color:#bfbfc0; background-color:transparent; text-align:center">
             <div class="sib-text-form-block">
-              <p>Subscribe to our mailing list & stay updated.</p>
+              <p>Subscribe to our mailing list.</p>
             </div>
           </div>
         </div>
@@ -119,14 +119,14 @@ Your browser does not support the audio element.
                 </div>
               </div>
 
-              <label class="entry__error entry__error--primary" style="font-size:16px; text-align:left; font-family:&quot;Helvetica&quot;, sans-serif; color:#661d1d; background-color:#ffeded; border-radius:3px; border-color:#ff4949;">
+              <label class="entry__error entry__error--primary" style="font-size:16px; text-align:left; font-family:Helvetica, sans-serif; color:#661d1d; background-color:#333; border-radius:21px; border-color:#ff4949;">
               </label>
             </div>
           </div>
         </div>
         <div style="padding: 8px 0;">
           <div class="sib-form-block" style="text-align: center">
-            <button class="sib-form-block__button sib-form-block__button-with-loader" style="font-size:16px; text-align:center; font-weight:700; font-family:&quot;Trebuchet MS&quot;, sans-serif; color:#FFFFFF; background-color:#145fe2; border-radius:20px; border-width:0px;" form="sib-form" type="submit">
+            <button class="sib-form-block__button sib-form-block__button-with-loader" style="font-size:16px; text-align:center; font-weight:700; font-family:Trebuchet MS, sans-serif; color:#FFFFFF; background-color:#145fe2; border-radius:20px; border-width:0px;" form="sib-form" type="submit">
               <svg class="icon clickable__icon progress-indicator__icon sib-hide-loader-icon" viewBox="0 0 512 512">
                 <path d="M460.116 373.846l-20.823-12.022c-5.541-3.199-7.54-10.159-4.663-15.874 30.137-59.886 28.343-131.652-5.386-189.946-33.641-58.394-94.896-95.833-161.827-99.676C261.028 55.961 256 50.751 256 44.352V20.309c0-6.904 5.808-12.337 12.703-11.982 83.556 4.306 160.163 50.864 202.11 123.677 42.063 72.696 44.079 162.316 6.031 236.832-3.14 6.148-10.75 8.461-16.728 5.01z" />
               </svg>
