--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Your browser does not support the audio element.
         <div style="padding: 8px 0;">
           <div class="sib-form-block" style="font-size:16px; text-align:center; font-family:Helvetica, sans-serif; color:#bfbfc0; background-color:transparent; text-align:center">
             <div class="sib-text-form-block">
-              <p>Subscribe to our mailing list.</p>
+              <p>Subscribe to our mailing list</p>
             </div>
           </div>
         </div>
@@ -114,7 +114,7 @@ Your browser does not support the audio element.
             <div class="form__entry entry_block">
               <div class="form__label-row ">
 
-                <div style="background-color:#333;border-radius:21px;" class="entry__field">
+                <div style="background-color:#333;border-radius:21px;border-color:#000;" class="entry__field">
                   <input class="input " type="text" id="EMAIL" name="EMAIL" autocomplete="off" placeholder="Your email" data-required="true" required />
                 </div>
               </div>
