--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ Your browser does not support the audio element.
             <div class="form__entry entry_block">
               <div class="form__label-row ">
 
-                <div style="background-color:#333;border-radius:21px;border-color:#000;" class="entry__field">
+                <div style="color:lightgray; background-color:#333;border-radius:11px;border-color:#000;" class="entry__field">
                   <input class="input " type="text" id="EMAIL" name="EMAIL" autocomplete="off" placeholder="Your email" data-required="true" required />
                 </div>
               </div>
