--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ Your browser does not support the audio element.
                 </div>
               </div>
 
-              <label class="entry__error entry__error--primary" style="font-size:16px; text-align:left; font-family:Helvetica, sans-serif; color:#661d1d; background-color:#333; border-radius:21px; border-color:#ff4949;">
+              <label class="entry__error entry__error--primary" style="font-size:16px; text-align:left; font-family:Helvetica, sans-serif; color:magenta; background-color:#000; border-radius:21px; border-color:#000;">
               </label>
             </div>
           </div>
