--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@ Your browser does not support the audio element.
     <div id="sib-container" class="sib-container--small sib-container--vertical" style="text-align:center; background-color:rgba(0,0,0,1); max-width:200px; border-radius:22px; border-width:0px; border-color:#C0CCD9; border-style:solid; direction:ltr">
       <form id="sib-form" method="POST" action="https://a119c92f.sibforms.com/serve/MUIEAFG8pVKjOzwQrwxVDSDw5Hr6gbKQYynzBVj6ikaTreq-jcVoofjXSXHy_vN1DEPzmNPMnZ7rj6yo60Voe-wTnia60kUvArt7lqXmHaW5SSYQbv9y5Oa8PZ__0Zc-c_Vt66cpPw-BbvjUpVHyvE3DJxM_Xfxulejf2ZxhlM-yAWbrPdaIcTrCr5vA4UEARIuT9VRb1iApFlt0" data-type="subscription">
         <div style="padding: 8px 0;">
-          <div class="sib-form-block" style="font-size:16px; text-align:center; font-family:phosphate, sans-serif; color:#bfbfc0; background-color:transparent; text-align:center">
+          <div class="sib-form-block" style="font-size:16px; text-align:center; font-family:Phosphate, sans-serif; color:#bfbfc0; background-color:transparent; text-align:center">
             <div class="sib-text-form-block">
-              <p>Subscribe</p>
+              <p>Subscribe to our Mailing List</p>
             </div>
           </div>
         </div>
