--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Your browser does not support the audio element.
         <div style="padding: 8px 0;">
           <div class="sib-form-block" style="font-size:16px; text-align:center; font-family:Phosphate, sans-serif; color:#bfbfc0; background-color:transparent; text-align:center">
             <div class="sib-text-form-block">
-              <p>Subscribe to our Mailing List</p>
+              <p>Subscribe</p>
             </div>
           </div>
         </div>
