--- a/index.html
+++ b/index.html
@@ -69,11 +69,7 @@
 Your browser does not support the audio element.
 </audio>
 <p style="color:antiquewhite; font-size:small;text-align:center;font-family:copperplate;margin-top:auto;">(Live) Scott Co. Blues</p>
-<audio controls title="Ease My Mind"style="display:block; margin:auto;border:outset 4px lightgray; border-radius:15px;">
-  <source src="Ease_My_Mind.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
-<p style="color:antiquewhite; font-size:small; text-align:center;font-family:copperplate;margin-top:auto;">(Studio) Ease My Mind</p>
+
 
 <div class="sib-form" style="text-align: center;
          background-color: transparent;                                 ">
@@ -105,7 +101,7 @@ Your browser does not support the audio element.
         <div style="padding: 8px 0;">
           <div class="sib-form-block" style="font-size:16px; text-align:center; font-family:Phosphate, sans-serif; color:#bfbfc0; background-color:transparent; text-align:center">
             <div class="sib-text-form-block">
-              <p>Subscribe to our Mailing List for updates</p>
+              <p>Join our mailing list for updates</p>
             </div>
           </div>
         </div>
