--- a/index.html
+++ b/index.html
@@ -70,9 +70,11 @@ Your browser does not support the audio element.
 </audio>
 <p style="color:antiquewhite; font-size:small;text-align:center;font-family:copperplate;margin-top:auto;">(Live) Scott Co. Blues</p>
 
-
+<address style="text-align:center; color:gray;">
+Contact for <a href="mailto:ivandogwood@pm.me">Booking</a>
+</address>
 <div class="sib-form" style="text-align: center;
-         background-color: transparent;                                 ">
+         background-color: transparent;">
   <div id="sib-form-container" class="sib-form-container">
     <div id="error-message" class="sib-form-message-panel" style="font-size:16px; text-align:left; font-family:&quot;Helvetica&quot;, sans-serif; color:#661d1d; background-color:#ffeded; border-radius:3px; border-color:#ff4949;max-width:200px;">
       <div class="sib-form-message-panel__text sib-form-message-panel__text--center">
@@ -91,7 +93,7 @@ Your browser does not support the audio element.
           <path d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 464c-118.664 0-216-96.055-216-216 0-118.663 96.055-216 216-216 118.664 0 216 96.055 216 216 0 118.663-96.055 216-216 216zm141.63-274.961L217.15 376.071c-4.705 4.667-12.303 4.637-16.97-.068l-85.878-86.572c-4.667-4.705-4.637-12.303.068-16.97l8.52-8.451c4.705-4.667 12.303-4.637 16.97.068l68.976 69.533 163.441-162.13c4.705-4.667 12.303-4.637 16.97.068l8.451 8.52c4.668 4.705 4.637 12.303-.068 16.97z" />
         </svg>
         <span class="sib-form-message-panel__inner-text">
-                          Yep, you are awesome.
+                          Yes, you are awesome.
                       </span>
       </div>
     </div>
@@ -101,7 +103,7 @@ Your browser does not support the audio element.
         <div style="padding: 8px 0;">
           <div class="sib-form-block" style="font-size:16px; text-align:center; font-family:Phosphate, sans-serif; color:#bfbfc0; background-color:transparent; text-align:center">
             <div class="sib-text-form-block">
-              <p style="font-size:small;">Join our mailing list for updates</p>
+              <p style="font-size:small;">Join the mailing list for updates</p>
             </div>
           </div>
         </div>
@@ -111,7 +113,7 @@ Your browser does not support the audio element.
               <div class="form__label-row ">
 
                 <div style="color:gray; background-color:#333;border-radius:11px;border-color:#000;" class="entry__field">
-                  <input class="input " type="text" id="EMAIL" name="EMAIL" autocomplete="off" placeholder="Your email" data-required="true" required />
+                  <input class="input " type="text" id="EMAIL" name="EMAIL" autocomplete="off" placeholder="email" data-required="true" required />
                 </div>
               </div>
 
@@ -143,7 +145,7 @@ Your browser does not support the audio element.
   window.LOCALE = 'en';
   window.EMAIL_INVALID_MESSAGE = window.SMS_INVALID_MESSAGE = "The information provided is invalid. Please review the field format and try again.";
 
-  window.REQUIRED_ERROR_MESSAGE = "Bruh...how u gon subscribe with no email?! ";
+  window.REQUIRED_ERROR_MESSAGE = "Nah bruh...add your email address ";
 
   window.GENERIC_INVALID_MESSAGE = "The information provided is invalid. Please review the field format and try again.";
 
