--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Your browser does not support the audio element.
 <p style="color:antiquewhite; font-size:small;text-align:center;font-family:copperplate;margin-top:auto;">(Live) Scott Co. Blues</p>
 
 <address style="text-align:center; color:gray;">
-Contact for <a href="mailto:ivandogwood@pm.me">Booking</a>
+Contact us <a href="mailto:ivandogwood@pm.me">for booking</a>
 </address>
 <div class="sib-form" style="text-align: center;
          background-color: transparent;">
@@ -93,7 +93,7 @@ Contact for <a href="mailto:ivandogwood@pm.me">Booking</a>
           <path d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 464c-118.664 0-216-96.055-216-216 0-118.663 96.055-216 216-216 118.664 0 216 96.055 216 216 0 118.663-96.055 216-216 216zm141.63-274.961L217.15 376.071c-4.705 4.667-12.303 4.637-16.97-.068l-85.878-86.572c-4.667-4.705-4.637-12.303.068-16.97l8.52-8.451c4.705-4.667 12.303-4.637 16.97.068l68.976 69.533 163.441-162.13c4.705-4.667 12.303-4.637 16.97.068l8.451 8.52c4.668 4.705 4.637 12.303-.068 16.97z" />
         </svg>
         <span class="sib-form-message-panel__inner-text">
-                          Yes, you are awesome.
+                          Yep, you're awesome.
                       </span>
       </div>
     </div>
@@ -113,7 +113,7 @@ Contact for <a href="mailto:ivandogwood@pm.me">Booking</a>
               <div class="form__label-row ">
 
                 <div style="color:gray; background-color:#333;border-radius:11px;border-color:#000;" class="entry__field">
-                  <input class="input " type="text" id="EMAIL" name="EMAIL" autocomplete="off" placeholder="email" data-required="true" required />
+                  <input class="input " type="text" id="EMAIL" name="EMAIL" autocomplete="off" placeholder="your email" data-required="true" required />
                 </div>
               </div>
 
@@ -145,7 +145,7 @@ Contact for <a href="mailto:ivandogwood@pm.me">Booking</a>
   window.LOCALE = 'en';
   window.EMAIL_INVALID_MESSAGE = window.SMS_INVALID_MESSAGE = "The information provided is invalid. Please review the field format and try again.";
 
-  window.REQUIRED_ERROR_MESSAGE = "Nah bruh...add your email address ";
+  window.REQUIRED_ERROR_MESSAGE = "bruh...gotta add your email address ";
 
   window.GENERIC_INVALID_MESSAGE = "The information provided is invalid. Please review the field format and try again.";
 
