--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Your browser does not support the audio element.
 <p style="color:antiquewhite; font-size:small;text-align:center;font-family:copperplate;margin-top:auto;">(Live) Scott Co. Blues</p>
 
 <address style="text-align:center; color:gray;">
-Contact us <a href="mailto:ivandogwood@pm.me">for booking</a>
+Performance booking: <br> <a href="mailto:ivandogwood@pm.me?subject=Booking">Contact us</a>
 </address>
 <div class="sib-form" style="text-align: center;
          background-color: transparent;">
