--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ Performance booking: <br> <a href="mailto:ivandogwood@pm.me?subject=Booking">Con
         <div style="padding: 8px 0;">
           <div class="sib-form-block" style="font-size:16px; text-align:center; font-family:Phosphate, sans-serif; color:#bfbfc0; background-color:transparent; text-align:center">
             <div class="sib-text-form-block">
-              <p style="font-size:small;">Join the mailing list for updates</p>
+              <p style="font-size:small;">Join the mailing list</p>
             </div>
           </div>
         </div>
