--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Your browser does not support the audio element.
 <p style="color:antiquewhite; font-size:small;text-align:center;font-family:copperplate;margin-top:auto;">(Live) Scott Co. Blues</p>
 
 <address style="text-align:center; color:gray;">
-Performance booking: <br> <a href="mailto:ivandogwood@pm.me?subject=Booking">Contact us</a>
+Performance booking: <br> <a style="color:red;"href="mailto:ivandogwood@pm.me?subject=Booking">Contact us</a>
 </address>
 <div class="sib-form" style="text-align: center;
          background-color: transparent;">
@@ -103,7 +103,7 @@ Performance booking: <br> <a href="mailto:ivandogwood@pm.me?subject=Booking">Con
         <div style="padding: 8px 0;">
           <div class="sib-form-block" style="font-size:16px; text-align:center; font-family:Phosphate, sans-serif; color:#bfbfc0; background-color:transparent; text-align:center">
             <div class="sib-text-form-block">
-              <p style="font-size:small;">Join the mailing list</p>
+              <p style="font-size:small;">Join our mailing list</p>
             </div>
           </div>
         </div>
