--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Your browser does not support the audio element.
 <p style="color:antiquewhite; font-size:small;text-align:center;font-family:copperplate;margin-top:auto;">(Live) Scott Co. Blues</p>
 
 <address style="text-align:center; color:gray;">
-Performance booking: <br> <a style="color:rgb(92,105,255);"href="mailto:ivandogwood@pm.me?subject=Booking">Email us</a>
+<a style="color:rgb(92,105,255);"href="mailto:ivandogwood@pm.me?subject=Performance Booking">Booking Email</a>
 </address>
 <div class="sib-form" style="text-align: center;
          background-color: transparent;">
