--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@ Your browser does not support the audio element.
 </audio>
 <p style="color:antiquewhite; font-size:small;text-align:center;font-family:copperplate;margin-top:auto;">(Live) Scott Co. Blues</p>
 
-<address style="text-align:center; color:gray;">
-<a style="color:rgb(92,105,255);"href="mailto:ivandogwood@pm.me?subject=Performance Booking">Booking Email</a>
+<address style="text-align:center; color:gray;"> Booking Email<br>
+<iconify-icon href="mailto:ivandogwood@pm.me?subject=Performance Booking" icon="carbon:email"></iconify-icon>"
 </address>
 <div class="sib-form" style="text-align: center;
          background-color: transparent;">
@@ -162,6 +162,6 @@ Your browser does not support the audio element.
   var AUTOHIDE = Boolean(1);
 </script>
 <script defer src="https://sibforms.com/forms/end-form/build/main.js"></script>
-
+<script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 </body>
 </html>
