--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Your browser does not support the audio element.
 <p style="color:antiquewhite; font-size:small;text-align:center;font-family:copperplate;margin-top:auto;">(Live) Scott Co. Blues</p>
 
 <address style="text-align:center; color:gray;"> Booking Email<br>
-<iconify-icon href="mailto:ivandogwood@pm.me?subject=Performance Booking" icon="carbon:email"></iconify-icon>"
+<iconify-icon href="mailto:ivandogwood@pm.me?subject=Performance Booking" icon="carbon:email"></iconify-icon>
 </address>
 <div class="sib-form" style="text-align: center;
          background-color: transparent;">
