--- a/index.html
+++ b/index.html
@@ -70,9 +70,14 @@ Your browser does not support the audio element.
 </audio>
 <p style="color:antiquewhite; font-size:small;text-align:center;font-family:copperplate;margin-top:auto;">(Live) Scott Co. Blues</p>
 
-<address style="text-align:center; color:gray;"> Booking Email<br>
-<iconify-icon href="mailto:ivandogwood@pm.me?subject=Performance Booking" icon="carbon:email"></iconify-icon>
-</address>
+
+<a href="mailto:ivandogwood@pm.me?subject=Performance Booking">
+<p style="text-align:center; color:gray;">
+</p>
+<iconify-icon icon="carbon:email"></iconify-icon>
+</a>
+
+
 <div class="sib-form" style="text-align: center;
          background-color: transparent;">
   <div id="sib-form-container" class="sib-form-container">
