--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="icon" type="image/icon" href="favicon.ico">
   <title>The Outlaw Red Ivan Dogwood</title>
-<script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+
 <style>
   @font-face {
     font-display: block;
@@ -72,9 +72,8 @@ Your browser does not support the audio element.
 
 
 <a href="mailto:ivandogwood@pm.me?subject=Performance Booking">
-<p style="text-align:center; color:gray;">
-</p>
-<iconify-icon icon="carbon:email"></iconify-icon>
+<p style="text-align:center; color:gray;">Booking Email</p>
+<img src="emailicon.gif"></img>
 </a>
 
 
