--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Your browser does not support the audio element.
 
 <a href="mailto:ivandogwood@pm.me?subject=Performance Booking">
 <p style="text-align:center; color:gray;">Booking Email</p>
-<img src="emailicon.gif"></img>
+<img style="align-content:center;"src="mailicon.png"></img>
 </a>
 
 
