--- a/index.html
+++ b/index.html
@@ -72,10 +72,9 @@ Your browser does not support the audio element.
 
 
 <a href="mailto:ivandogwood@pm.me?subject=Performance Booking">
-<p style="text-align:center; color:gray;">Booking Email</p>
-<img style="align-content:center;"src="mailicon.png"></img>
+<img style="display:block; margin:auto;" src="mail2.png"></img>
 </a>
-
+<p style="text-align:center; color:gray;">Booking Email</p>
 
 <div class="sib-form" style="text-align: center;
          background-color: transparent;">
