--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@ Your browser does not support the audio element.
 
 
 <a href="mailto:ivandogwood@pm.me?subject=Performance Booking">
-<img style="display:block; margin:auto;" src="mail2.png"></img>
+<img style="padding-top:10px; display:block; margin:auto;" src="mail2.png"></img>
 </a>
-<p style="text-align:center; color:gray;">Booking Email</p>
+<p style="text-align:center; color:gray; margin-bottom:-20px; margin-top: -20px; padding-top:9px; text-decoration:overline;">Booking Email</p>
 
 <div class="sib-form" style="text-align: center;
          background-color: transparent;">
