--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Your browser does not support the audio element.
 
 
 <div class="sib-form" style="text-align: center;
-         background-color: transparent;">
+         background-color: transparent; margin-top:-30px; padding-bottom:0px;">
   <div id="sib-form-container" class="sib-form-container">
     <div id="error-message" class="sib-form-message-panel" style="font-size:16px; text-align:left; font-family:&quot;Helvetica&quot;, sans-serif; color:#661d1d; background-color:#ffeded; border-radius:3px; border-color:#ff4949;max-width:200px;">
       <div class="sib-form-message-panel__text sib-form-message-panel__text--center">
@@ -138,10 +138,10 @@ Your browser does not support the audio element.
     </div>
   </div>
 </div>
-<a href="mailto:ivandogwood@pm.me?subject=Performance Booking">
+<a href="mailto:ivandogwood@pm.me?subject=Booking">
 <img style="padding-top:10px; display:block; margin:auto;" src="mail2.png"></img>
 </a>
-<p style="text-align:center; color:gray; margin-bottom:-20px; margin-top: -20px; padding-top:9px; text-decoration:overline;">Booking Email</p>
+<p style="text-align:center; color:gray; margin-bottom:-20px; margin-top: -20px; padding-top:9px; padding-bottom:5px; text-decoration:overline;">Booking Email</p>
 <script>
   window.REQUIRED_CODE_ERROR_MESSAGE = 'Please choose a country code';
   window.LOCALE = 'en';
