--- a/index.html
+++ b/index.html
@@ -139,9 +139,14 @@ Your browser does not support the audio element.
   </div>
 </div>
 <a href="mailto:ivandogwood@pm.me?subject=Booking">
-<img style="padding-top:10px; display:block; margin:auto;" src="mail2.png"></img>
+<img style="padding-top:10px; display:block; margin:auto; width:80px;" src="mail2.png"></img>
 </a>
 <p style="text-align:center; color:gray; margin-bottom:-20px; margin-top: -20px; padding-top:9px; padding-bottom:5px; text-decoration:overline;">Booking Email</p>
+
+<a href="https://instagram.com/ivandogwood">
+<img style="padding-top:10px; display:block; margin:auto;" src="insta.png"></img>
+</a>
+
 <script>
   window.REQUIRED_CODE_ERROR_MESSAGE = 'Please choose a country code';
   window.LOCALE = 'en';
