--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ Your browser does not support the audio element.
   </div>
 </div>
 <a href="mailto:ivandogwood@pm.me?subject=Booking">
-<img style="padding-top:10px; display:block; margin:auto; width:80px;" src="mail2.png"></img>
+<img style="display:block; margin:auto; width:80px;" src="mail2.png"></img>
 </a>
 <p style="text-align:center; color:gray; margin-bottom:-20px; margin-top: -20px; padding-top:9px; padding-bottom:5px; text-decoration:overline;">Booking Email</p>
 
