--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ Your browser does not support the audio element.
 <p style="text-align:center; color:gray; margin-bottom:-20px; margin-top: -20px; padding-top:9px; padding-bottom:5px; text-decoration:overline;">Booking Email</p>
 
 <a href="https://instagram.com/ivandogwood">
-<img style="padding-top:10px; display:block; margin:auto;" src="instagram 2.png"></img>
+<img style="padding-top:10px; display:block; margin:auto;width:40px;" src="instagram 2.png"></img>
 </a>
 
 <script>
