--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
  --->
 <body style="background-color:black">
 <img src="805A933C-8E22-4FE5-8690-7FEAF0BBEB66.gif" style="width:80%;margin-left:10%;margin-top:10%;"></img>
-<p style="margin-top:42px;text-align: center;color:white;font-family:courier;font-size:large;"> Your own sophisticated low brow blues lick-laden, fuzz-covered Appalachian soul-powered original rock & roll guitar/drums duo. <br><br> Award-winning songwriting. </p>
+<p style="margin-top:42px;text-align: center;color:white;font-family:courier;font-size:large;"> Your own sophisticated low brow blues lick-laden, fuzz-covered, Appalachian soul-powered, original rock & roll guitar/drums duo. <br><br> Award-winning songwriting. </p>
 
 <h3 style="text-align:center; color:gray; padding-top:25px; text-decoration: overline; font-family:georgia; text-shadow: 0px 1px 0px red;"> '23 BREW & TAP  TOUR DATES</h3>
 <p style="color:white; text-align:center; margin-top:-20px; padding-bottom:25px;">(coming soon)</p>
