--- a/outlawkaraoke.html
+++ b/outlawkaraoke.html
@@ -1,1 +1,76 @@
-https://cash.app/launch/bitcoin/$ivandogwood/DtzhbruKqE
+<!DOCTYPE html>
+<html>
+
+<head lang="en">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="icon" type="image/icon" href="favicon.ico">
+  <title>The Outlaw Red Ivan Dogwood</title>
+
+<style>
+  background-color:black;
+  @font-face {
+    font-display: block;
+    font-family: Roboto;
+    src: url(https://assets.sendinblue.com/font/Roboto/Latin/normal/normal/7529907e9eaf8ebb5220c5f9850e3811.woff2) format("woff2"), url(https://assets.sendinblue.com/font/Roboto/Latin/normal/normal/25c678feafdc175a70922a116c9be3e7.woff) format("woff")
+  }
+
+  @font-face {
+    font-display: fallback;
+    font-family: Roboto;
+    font-weight: 600;
+    src: url(https://assets.sendinblue.com/font/Roboto/Latin/medium/normal/6e9caeeafb1f3491be3e32744bc30440.woff2) format("woff2"), url(https://assets.sendinblue.com/font/Roboto/Latin/medium/normal/71501f0d8d5aa95960f6475d5487d4c2.woff) format("woff")
+  }
+
+  @font-face {
+    font-display: fallback;
+    font-family: Roboto;
+    font-weight: 700;
+    src: url(https://assets.sendinblue.com/font/Roboto/Latin/bold/normal/3ef7cf158f310cf752d5ad08cd0e7e60.woff2) format("woff2"), url(https://assets.sendinblue.com/font/Roboto/Latin/bold/normal/ece3a1d82f18b60bcce0211725c476aa.woff) format("woff")
+  }
+
+  #sib-container input:-ms-input-placeholder {
+    text-align: left;
+    font-family: "Helvetica", sans-serif;
+    color: #c0ccda;
+  }
+
+  #sib-container input::placeholder {
+    text-align: left;
+    font-family: "Helvetica", sans-serif;
+    color: #c0ccda;
+  }
+
+  #sib-container textarea::placeholder {
+    text-align: left;
+    font-family: "Helvetica", sans-serif;
+    color: #c0ccda;
+  }
+</style>
+
+</head>
+  <!-- 
+  <link rel="stylesheet" href="css/themes/slim.css">
+  <link rel="stylesheet" href="css/themes/slim.one.css">
+  <link rel="stylesheet" href="css/themes/loading-indicator.css">
+ --->
+<body style="background-color:black">
+<img src="805A933C-8E22-4FE5-8690-7FEAF0BBEB66.gif" style="width:80%;margin-left:10%;margin-top:10%;"></img>
+
+<a href="https://cash.app/launch/bitcoin/$ivandogwood/DtzhbruKqE">
+<img style="padding-top:20px; display:block; margin:auto;width:80px;" src="cashapp.png"></img>
+</a>
+
+
+<a href="mailto:ivandogwood@pm.me?subject=Booking">
+<img style="display:block; margin:auto; width:80px;" src="mail2.png"></img>
+</a>
+
+<a href="https://instagram.com/ivandogwood">
+<img style="padding-top:20px; display:block; margin:auto;width:80px;" src="instagram 2.png"></img>
+</a>
+
+</body>
+</html>
+
