--- a/index.html
+++ b/index.html
@@ -21,33 +21,7 @@
     font-weight: 600;
     src: url(https://assets.sendinblue.com/font/Roboto/Latin/medium/normal/6e9caeeafb1f3491be3e32744bc30440.woff2) format("woff2"), url(https://assets.sendinblue.com/font/Roboto/Latin/medium/normal/71501f0d8d5aa95960f6475d5487d4c2.woff) format("woff")
   }
-
-  @font-face {
-    font-display: fallback;
-    font-family: Roboto;
-    font-weight: 700;
-    src: url(https://assets.sendinblue.com/font/Roboto/Latin/bold/normal/3ef7cf158f310cf752d5ad08cd0e7e60.woff2) format("woff2"), url(https://assets.sendinblue.com/font/Roboto/Latin/bold/normal/ece3a1d82f18b60bcce0211725c476aa.woff) format("woff")
-  }
-
-  #sib-container input:-ms-input-placeholder {
-    text-align: left;
-    font-family: "Helvetica", sans-serif;
-    color: #c0ccda;
-  }
-
-  #sib-container input::placeholder {
-    text-align: left;
-    font-family: "Helvetica", sans-serif;
-    color: #c0ccda;
-  }
-
-  #sib-container textarea::placeholder {
-    text-align: left;
-    font-family: "Helvetica", sans-serif;
-    color: #c0ccda;
-  }
 </style>
-<link rel="stylesheet" href="https://sibforms.com/forms/end-form/build/sib-styles.css">
 
 
 </head>
@@ -72,8 +46,11 @@ Your browser does not support the audio element.
 
 
 <a href="outlawkaraoke.html">
-  <h3 style=display:block; margin:auto; font-family:courier;color:white;>Outlaw Karaoke</h3>
-</a>a>
+  <h3 style="display:block; margin:auto; text-align:center; font-size:33px; color:lavenderblush;">Outlaw Karaoke</h3>
+</a>
+
+
+  
 <a href="mailto:ivandogwood@pm.me?subject=Booking">
 <img style="display:block; margin:auto; width:80px;" src="mail2.png"></img>
 </a>
