--- a/outlawkaraoke.html
+++ b/outlawkaraoke.html
@@ -24,7 +24,9 @@
   <link rel="stylesheet" href="css/themes/loading-indicator.css">
  --->
 <body style="background-color:black">
+  <a href="index.html">
 <img src="805A933C-8E22-4FE5-8690-7FEAF0BBEB66.gif" style="width:80%;margin-left:10%;margin-top:10%;"></img>
+  </a>
 
 <a href="https://cash.app/launch/$ivandogwood">
 <img style="padding-top:20px; display:block; margin:auto;width:210px;" src="82366345-18F7-4A2B-8747-36AB81FDCFF1.jpeg"></img>
