--- a/outlawkaraoke.html
+++ b/outlawkaraoke.html
@@ -34,7 +34,7 @@
 
 
   <a href="">
-    <p>Like A Rolling Stone - Bob Dylan</p>
+    <p style="display:block; margin:auto; font-family:courier;font-size: 21px; color:white;">Like A Rolling Stone - Bob Dylan</p>
   </a>
 
 <a href="mailto:ivandogwood@pm.me?subject=Booking">
