--- a/outlawkaraoke.html
+++ b/outlawkaraoke.html
@@ -33,7 +33,7 @@
 </a>
 
 
-  <a href="">
+  <a href="/Lyrics/likearollingstone.html">
     <p style="display:block; margin:auto; font-family:courier;font-size: 21px; color:white;">Like A Rolling Stone - Bob Dylan</p>
   </a>
 
