--- a/Lyrics/likearollingstone.html
+++ b/Lyrics/likearollingstone.html
@@ -7,7 +7,7 @@
 </head>
 
 <body style="background-color:black;">
-<p style="color:aliceblue;">
+<p style="color:aliceblue;font-size:larger;">
 
 Once upon a time you dressed so fine
 <br>
