--- a/Lyrics/likearollingstone.html
+++ b/Lyrics/likearollingstone.html
@@ -29,10 +29,10 @@ To be without a home <br>
 Like a complete unknown, <br> 
 like a rolling stone <br> <br>
 
-Ahh you've gone to the finest schools, alright Miss Lonely
+Ahh you've gone to the finest schools, alright Miss Lonely<br>
 But you know you only used to get juiced in it <br>
 
-Nobody's ever taught you how to live out on the street
+Nobody's ever taught you how to live out on the street<br>
 And now you're gonna have to get used to it <br>
 
 You say you never compromise <br>
@@ -61,9 +61,9 @@ How does it feel, <br> how does it feel? <br>
 To be on your own, <br> with no direction home <br>
 Like a complete unknown, <br> like a rolling stone <br> <br>
 
-Ahh princess on a steeple and all the pretty people
+Ahh princess on a steeple and all the pretty people<br>
 They're all drinking, thinking that they've got it made <br>
-Exchanging all precious gifts
+Exchanging all precious gifts<br>
 But you better take your diamond ring, you better pawn it babe <br>
 You used to be so amused <br>
 At Napoleon in rags and the language that he used <br>
