--- a/outlawkaraoke.html
+++ b/outlawkaraoke.html
@@ -34,11 +34,11 @@
 
 
   <a href="/Lyrics/likearollingstone.html">
-    <p style="display:block; margin:auto; font-family:courier;font-size: 21px; color:white;">Like A Rolling Stone - Bob Dylan</p>
+    <p style="display:block; margin:auto; padding: 33px 33px; font-family:courier;font-size: 21px; color:white;">Like A Rolling Stone - Bob Dylan</p>
   </a>
 
-<a href="mailto:ivandogwood@pm.me?subject=Booking">
-<img style="display:block; margin:auto; width:80px;" src="mail2.png"></img>
+<a href="mailto:ivandogwood@pm.me?subject=Karaoke Request">
+<img style="display:block; margin:auto; width:80px; color:white;" src="mail2.png">Request song(s) to be added to list</img>
 </a>
 
 <a href="https://instagram.com/ivandogwood">
