--- a/outlawkaraoke.html
+++ b/outlawkaraoke.html
@@ -38,7 +38,7 @@
   </a>
 
 <a href="mailto:ivandogwood@pm.me?subject=Karaoke Request">
-<img style="display:block text-align:center; margin:auto; width:80px; color:white;" src="mail2.png">Request a song to be added to list</img>
+<img style="display:block text-align:center; margin:auto; width:80px; color:white; src=mail2.png">Request a song to be added to list</img>
 </a>
 
 <a href="https://instagram.com/ivandogwood">
