--- a/outlawkaraoke.html
+++ b/outlawkaraoke.html
@@ -37,8 +37,8 @@
     <p style="display:block; margin:auto; padding: 33px 33px; font-family:courier;font-size: 21px; color:white;">Like A Rolling Stone - Bob Dylan</p>
   </a>
 
-<a href="mailto:ivandogwood@pm.me?subject=Karaoke Request">
-<img style="display:block text-align:center; margin:auto; width:80px; color:white; src=mail2.png">Request a song to be added to list</img>
+<a style="display:block; margin:auto; text-align:center;" href="mailto:ivandogwood@pm.me?subject=Karaoke Request">
+<img src="mail2.png" style="display:block text-align:center; margin:auto; width:80px; color:white;">Request a song to be added to list</img>
 </a>
 
 <a href="https://instagram.com/ivandogwood">
