--- a/outlawkaraoke.html
+++ b/outlawkaraoke.html
@@ -38,7 +38,7 @@
   </a>
 
 <a style="display:block; margin:auto; text-align:center;" href="mailto:ivandogwood@pm.me?subject=Karaoke Request">
-<img src="mail2.png" style="display:block text-align:center; margin:auto; width:80px; color:white;">Request a song to be added to list</img>
+<img src="mail2.png" style="display:block; text-align:center; margin:auto; width:80px; color:white;">Request a song to be added to list</img>
 </a>
 
 <a href="https://instagram.com/ivandogwood">
