--- a/outlawkaraoke.html
+++ b/outlawkaraoke.html
@@ -32,9 +32,14 @@
 <img style="padding-top:20px; display:block; margin:auto;width:210px;" src="82366345-18F7-4A2B-8747-36AB81FDCFF1.jpeg"></img>
 </a>
 
+  <!--- Karaoke Song List --->
 
   <a href="/Lyrics/likearollingstone.html">
-    <p style="display:block; margin:auto; padding: 33px 33px; font-family:courier;font-size: 21px; color:white;">Like A Rolling Stone - Bob Dylan</p>
+    <p style="display:block; margin:auto; padding: 33px 33px; font-family:courier;font-size: 18px; color:white;">Like A Rolling Stone - Bob Dylan</p>
+  </a>
+
+    <a href="/Lyrics/girlsjustwannahavefun.html">
+    <p style="display:block; margin:auto; padding: 33px 33px; font-family:courier;font-size: 18px;">Girls Just Wanna Have Fun - Cyndi Lauper</p>
   </a>
 
 <a style="display:block; margin:auto; text-align:center; color:darkorange;" href="mailto:ivandogwood@pm.me?subject=Karaoke Request">
