--- a/outlawkaraoke.html
+++ b/outlawkaraoke.html
@@ -39,7 +39,7 @@
   </a>
 
     <a href="/Lyrics/girlsjustwannahavefun.html">
-    <p style="display:block; margin:auto; padding: 33px 33px; font-family:courier;font-size: 18px;">Girls Just Wanna Have Fun - Cyndi Lauper</p>
+    <p style="display:block; margin:auto; padding: 33px 33px; font-family:courier;font-size: 18px; color:white;">Girls Just Wanna Have Fun - Cyndi Lauper</p>
   </a>
 
 <a style="display:block; margin:auto; text-align:center; color:darkorange;" href="mailto:ivandogwood@pm.me?subject=Karaoke Request">
