--- a/Lyrics/girlsjustwannahavefun.html
+++ b/Lyrics/girlsjustwannahavefun.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Like A Rolling Stone</title>
+    <title>Girls Just Wanna Have Fun</title>
     
 </head>
 
