--- a/outlawkaraoke.html
+++ b/outlawkaraoke.html
@@ -42,8 +42,8 @@
     <p style="display:block; margin:auto; padding-top: 10px; font-family:times new roman;font-size: 18px; color:white;">Girls Just Wanna Have Fun - Cyndi Lauper</p>
   </a>
 
-<a style="display:block; margin:auto; text-align:center; color:darkorange;" href="mailto:ivandogwood@pm.me?subject=Karaoke Request">
-<img src="mail2.png" style="display:block; text-align:center; margin:auto; width:80px; color:white;">Request a song to be added to list</img>
+<a style="display:block; margin:auto;text-align:center; color:darkorange;" href="mailto:ivandogwood@pm.me?subject=Karaoke Request">
+<img src="mail2.png" style="padding-top:33px;display:block; text-align:center; margin:auto; width:80px; color:white;">Request a song to be added to list</img>
 </a>
 
 <a href="https://instagram.com/ivandogwood">
