--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head lang="en">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
+  <meta name="google-site-verification" content="QWNFze72_nXr0MBbdA4s9Zc3CyjlnyRB8WeBt-21wKU" />
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="icon" type="image/icon" href="favicon.ico">
   <title>The Outlaw Red Ivan Dogwood</title>
